--- a/Team Up-numpy.ipynb
+++ b/Team Up-numpy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Can we do that better ?\n",
     "PIECES=np.column_stack((np.repeat(SHAPES, len(COLORS), axis=0), np.tile(COLORS, len(SHAPES))))\n",
-    "IDX, IDY, IDZ, IDCOL = 0, 1, 2, 3"
+    "IDX, IDY, IDZ, IDCOL = 0, 1, 2, 3\n",
+    "IDPX, IDPY, IDPZ = 4, 5, 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 774,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 804,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INITIAL_DECK = np.array([CARD_SQUARE, CARD_WHITE, CARD_LONG, CARD_RECTANGLE, CARD_BLUE,\n",
+    "\n",
+    "# Remember to remove the rectangle\n",
+    "INITIAL_DECK = np.array([CARD_RECTANGLE,\n",
+    "                         CARD_SQUARE, CARD_WHITE, CARD_LONG, CARD_RECTANGLE, CARD_BLUE,\n",
     "                         CARD_RED, CARD_WHITE, CARD_RECTANGLE, CARD_WHITE, CARD_BLUE,\n",
     "                         CARD_RED, CARD_SQUARE, CARD_LONG, CARD_RECTANGLE, CARD_BLUE,\n",
     "                         CARD_LONG, CARD_LONG, CARD_BLUE, CARD_SQUARE, CARD_RED, CARD_LONG,\n",
@@ -97,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 805,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 806,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 807,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 808,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,79 +238,75 @@
     "        \n",
     "        board_cubes = np.zeros(BOARD, dtype=int)\n",
     "        board_cubes[:first_shape[IDX],:first_shape[IDY]] = first_shape[IDZ]\n",
-    "        board_pieces = np.concatenate([first_shape, (GREEN, 0, 0, 0)])\n",
-    "        return cls(turn=0, deck=deck, used=np.empty((0, 1)), board_cubes=board_cubes, board_pieces=board_pieces, first=first)\n",
+    "        board_pieces = np.concatenate([first_shape, (GREEN, 0, 0, 0)])[None]\n",
+    "        return cls(turn=0,\n",
+    "                   deck=deck,\n",
+    "                   used=np.empty((0, 1)),\n",
+    "                   board_cubes=board_cubes,\n",
+    "                   board_pieces=board_pieces,\n",
+    "                   first=first)\n",
     "    \n",
     "    def draw(self):\n",
     "        draw(pieces=self.board_pieces)\n",
     "    \n",
     "    def possible_moves(self):\n",
-    "        authorized = self.deck[self.turn] \n",
+    "        # All possible blocks from the card\n",
+    "        authorized = self.deck[self.turn]\n",
+    "        \n",
+    "        # Remove those already used\n",
     "        available = authorized[np.all(np.any(authorized != used[:, None, :], axis=2), axis=0)]\n",
     "        \n",
+    "        # Add all possible rotations\n",
     "        avail_and_rotated = np.unique(np.concatenate((available, available[:,(1, 0, 2, 3)])), axis=0)\n",
     "        \n",
-    "        all_moves = combine(avail_and_rotated, np.arange(BOARD[0]), np.range(BOARD[1]))\n",
+    "        # Combine with every possible coordinate\n",
+    "        moves = combine(avail_and_rotated, np.arange(BOARD[0])[...,None], np.arange(BOARD[1])[...,None])\n",
     "        \n",
-    "        return all_moves\n",
+    "        # Remove out of bounds\n",
+    "        moves = moves[np.logical_not(np.any([\n",
+    "            moves[:,IDX] + moves[:,IDPX] > BOARD[0],\n",
+    "            moves[:,IDY] + moves[:,IDPY] > BOARD[1],\n",
+    "        ], axis=0))]\n",
+    "        \n",
+    "        # Remove z clash\n",
+    "        x, y = np.indices(BOARD)\n",
+    "        # This will be the list of coordinates for each move\n",
+    "        coord = moves[:, (IDPX, IDPY)]\n",
+    "        # This is board cubes, repeated for each move\n",
+    "        repeated = np.repeat(self.board_cubes[None], len(moves), axis=0)\n",
+    "        # This is the height of the point a each coordinate\n",
+    "        heights = self.board_cubes[tuple(coord.T)]\n",
+    "        # This is a mask the shape of the board, with True where the piece is, for each move\n",
+    "        shapes = np.moveaxis(np.all([\n",
+    "            moves[:, IDPX] <= x[...,None],\n",
+    "            x[...,None] < moves[:, IDPX] + moves[:, IDX],\n",
+    "            moves[:, IDPY] <= y[...,None],\n",
+    "            y[...,None] < moves[:, IDPY] + moves[:, IDY]], axis=0), -1, 0)\n",
+    "\n",
+    "        # This is a mask the shape of the board with all the places where height is equal to\n",
+    "        # the height at the coordinate\n",
+    "        equal = np.equal(repeated, heights[...,None,None])\n",
+    "\n",
+    "        # Couldn't find how to remove the for loop here :(\n",
+    "        # Here we keep only the pieces for which equal[shape] is all True\n",
+    "        moves = moves[np.array([np.all(e[s]) for e, s in zip(equal, shapes)])]\n",
+    "        \n",
+    "        ID2 = IDPY + 1\n",
+    "        moves_pieces = concatenate_two(moves, self.board_pieces)\n",
+    "        return moves_pieces\n",
+    "        moves_pieces = moves_pieces[np.all(moves_pieces[:,IDX:IDZ + 1] ==\n",
+    "                                           moves_pieces[:,ID2 + IDX:ID2 + IDZ + 1],\n",
+    "                                           axis=1)]\n",
+    "        distances = []\n",
+    "        \n",
+    "        \n",
+    "        return moves\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    def check(self):\n",
-    "        piece = self.piece\n",
-    "        pos = self.pos\n",
-    "        piece_cubes = self.piece_cubes\n",
-    "        piece_shape = self.piece_shape\n",
-    "            \n",
-    "        # Is piece out of bounds:\n",
-    "        if any(p < 0 for p in pos):\n",
-    "            raise OutOfBounds(\"Invalid position (<0)\")\n",
-    "        if any(p + s > b for p, s, b in zip(pos, piece_shape, BOARD)):\n",
-    "            raise OutOfBounds(\"Invalid position (>border)\")\n",
-    "        \n",
-    "        # Check all heights under piece: should be all equal to z coord -1\n",
-    "        z = self.pos3.z\n",
-    "        \n",
-    "        if z == 0:\n",
-    "            to_check = [C2(pos.x - 1, pos.y),\n",
-    "                        C2(pos.x, pos.y - 1),\n",
-    "                        C2(pos.x + piece_shape.x, pos.y),\n",
-    "                        C2(pos.x, pos.y + piece_shape.y)]\n",
-    "            for c in to_check:\n",
-    "                try:\n",
-    "                    if self.game.board_cubes[c]:\n",
-    "                        break\n",
-    "                except IndexError:\n",
-    "                    continue\n",
-    "            else:\n",
-    "                raise PieceNotNextToAnotherPiece()\n",
-    "        \n",
-    "        all_z = self.game.board_cubes[piece_cubes]\n",
-    "        if not np.all(all_z == (z)):\n",
-    "            raise PieceNotOnOtherPieces(f\"Wrong height (should be all {z}):\\n{all_z}\")\n",
-    "        \n",
-    "        # Is piece next to similar piece\n",
-    "        # Check 5 directions with board_pieces\n",
-    "        forbidden = {C3(pos.x, pos.y, z - piece_shape.z),\n",
-    "                     C3(pos.x - piece_shape.x, pos.y, z),\n",
-    "                     C3(pos.x + piece_shape.x, pos.y, z),\n",
-    "                     C3(pos.x, pos.y - piece_shape.y, z),\n",
-    "                     C3(pos.x, pos.y + piece_shape.y, z)}\n",
-    "\n",
-    "        if any((f, piece_shape) in self.game.board_pieces for f in forbidden):\n",
-    "            raise PieceNextToSimilarPiece()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 809,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,195 +321,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 810,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-186-b8a99bb1c34d>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-186-b8a99bb1c34d>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    class Game:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Move:\n",
-    "    def __init__(self, game:Game, piece: Piece, rotated: bool, pos:C2):\n",
-    "        self.game = game\n",
-    "        self.piece = piece\n",
-    "        self.rotated = rotated\n",
-    "        self.pos = pos\n",
-    "        self.pos3 = C3(*pos, self.game.board_cubes[pos])\n",
-    "        \n",
-    "        self.piece_shape = piece.shape.value\n",
-    "        if rotated:\n",
-    "            self.piece_shape = rotate(self.piece_shape)\n",
-    "        \n",
-    "        x, y = np.indices(BOARD)\n",
-    "        self.piece_cubes = ((pos.x <= x) & (x < pos.x + self.piece_shape.x) &\n",
-    "                            (pos.y <= y) & (y < pos.y + self.piece_shape.y))\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.piece} {self.pos} {'r' if self.rotated else ''}\"\n",
-    "    \n",
-    "    def check(self):\n",
-    "        piece = self.piece\n",
-    "        pos = self.pos\n",
-    "        piece_cubes = self.piece_cubes\n",
-    "        piece_shape = self.piece_shape\n",
-    "        # Is piece available\n",
-    "        if piece not in PIECES - frozenset(self.game.used):\n",
-    "            raise PieceNotAvaliable(\"Piece not available\")\n",
-    "        # Is piece valid given card\n",
-    "        if piece not in self.game.card.value:\n",
-    "            raise PieceNotIncludedInCare(\"Forbidden piece given current card\")\n",
-    "            \n",
-    "        # Is piece out of bounds:\n",
-    "        if any(p < 0 for p in pos):\n",
-    "            raise OutOfBounds(\"Invalid position (<0)\")\n",
-    "        if any(p + s > b for p, s, b in zip(pos, piece_shape, BOARD)):\n",
-    "            raise OutOfBounds(\"Invalid position (>border)\")\n",
-    "        \n",
-    "        # Check all heights under piece: should be all equal to z coord -1\n",
-    "        z = self.pos3.z\n",
-    "        \n",
-    "        if z == 0:\n",
-    "            to_check = [C2(pos.x - 1, pos.y),\n",
-    "                        C2(pos.x, pos.y - 1),\n",
-    "                        C2(pos.x + piece_shape.x, pos.y),\n",
-    "                        C2(pos.x, pos.y + piece_shape.y)]\n",
-    "            for c in to_check:\n",
-    "                try:\n",
-    "                    if self.game.board_cubes[c]:\n",
-    "                        break\n",
-    "                except IndexError:\n",
-    "                    continue\n",
-    "            else:\n",
-    "                raise PieceNotNextToAnotherPiece()\n",
-    "        \n",
-    "        all_z = self.game.board_cubes[piece_cubes]\n",
-    "        if not np.all(all_z == (z)):\n",
-    "            raise PieceNotOnOtherPieces(f\"Wrong height (should be all {z}):\\n{all_z}\")\n",
-    "        \n",
-    "        # Is piece next to similar piece\n",
-    "        # Check 5 directions with board_pieces\n",
-    "        forbidden = {C3(pos.x, pos.y, z - piece_shape.z),\n",
-    "                     C3(pos.x - piece_shape.x, pos.y, z),\n",
-    "                     C3(pos.x + piece_shape.x, pos.y, z),\n",
-    "                     C3(pos.x, pos.y - piece_shape.y, z),\n",
-    "                     C3(pos.x, pos.y + piece_shape.y, z)}\n",
-    "\n",
-    "        if any((f, piece_shape) in self.game.board_pieces for f in forbidden):\n",
-    "            raise PieceNextToSimilarPiece()\n",
-    "\n",
-    "    def play(self):\n",
-    "        # Add piece_cubes to board_cubes\n",
-    "        self.game.board_cubes[self.piece_cubes] += self.piece_shape.z\n",
-    "        # Add pos & piece to board_pieces \n",
-    "        self.game.board_pieces[(self.pos3, self.piece_shape)] = self.piece.color\n",
-    "        \n",
-    "        self.game.used.append(self.piece)\n",
-    "        self.game.turn += 1"
+    "moves_pieces=Game.new(ABC).possible_moves()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 816,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 4, 1],\n",
-       "       [1, 1, 4, 2],\n",
-       "       [2, 1, 3, 0],\n",
-       "       [2, 1, 3, 1],\n",
-       "       [2, 1, 3, 2],\n",
-       "       [3, 1, 2, 0],\n",
-       "       [3, 1, 2, 1],\n",
-       "       [3, 1, 2, 2],\n",
-       "       [2, 1, 2, 0]])"
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 816,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ID2 = IDPY + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 803,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 803,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.array([[1, 2], [3, 4]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "def random_play():\n",
-    "    g = Game.new(FirstPos.ABC)\n",
-    "    while True:\n",
-    "        try:\n",
-    "            next(g.possible_moves()).play()\n",
-    "        except StopIteration:\n",
-    "            break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "613 ms ± 13 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit tuple(random_play())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " "
-     ]
-    }
-   ],
-   "source": [
-    "%prun random_play()"
-   ]
   },
   {
    "cell_type": "code",
